@@ -1,4 +1,5 @@
 0.3.5.31
+  - (zathor) [ChapterCreator] removed error popup if more than one chapter is added within the preview window
   - (zathor) [VideoPlayer] time code enabled by default
 
 0.3.5.30
